Closed
Bug 493111
Opened 17 years ago
Closed 16 years ago
"ASSERTION: Range index not returned"
Categories
(Core :: DOM: Selection, defect)
Tracking
()
RESOLVED
FIXED
mozilla1.9.3a1
| Tracking | Status | |
|---|---|---|
| status1.9.2 | --- | beta1-fixed |
People
(Reporter: jruderman, Assigned: graememcc)
References
(Depends on 1 open bug)
Details
(Keywords: assertion, regression, testcase)
Attachments
(1 file)
|
1.92 KB,
patch
|
roc
:
review+
dbaron
:
approval1.9.2+
|
Details | Diff | Splinter Review |
editor/libeditor/html/crashtests/336081-1.xhtml
triggers
###!!! ASSERTION: Range index not returned: 'rangeIndex >= 0', file /Users/jruderman/central/layout/generic/nsSelection.cpp, line 4990
Flags: in-testsuite+
| Assignee | ||
Comment 1•16 years ago
|
||
More fallout from bug 348681.
The "overlap" case in AddItem fails to correctly set aOutIndex, triggering the assertion.
| Assignee | ||
Updated•16 years ago
|
Blocks: 348681
Keywords: regression
Attachment #401669 -
Flags: review?(roc) → review+
| Assignee | ||
Comment 2•16 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9.3a1
| Assignee | ||
Updated•16 years ago
|
Attachment #401669 -
Flags: approval1.9.2?
| Assignee | ||
Comment 3•16 years ago
|
||
Comment on attachment 401669 [details] [diff] [review]
Patch v1
Requesting a1.9.2 for a trivial fix: aside from the assertion spew in debug builds, in certain circumstances this could cause unpredictable behaviour when performing multiple selections, as failing to return the index of the new range would lead to the focus and anchor nodes being reported as null.
Comment on attachment 401669 [details] [diff] [review]
Patch v1
a1.9.2=dbaron
But you should add showfunc = 1 to the [diff] section of your ~/.hgrc .
Attachment #401669 -
Flags: approval1.9.2? → approval1.9.2+
| Assignee | ||
Comment 5•16 years ago
|
||
status1.9.2:
--- → beta1-fixed
You need to log in
before you can comment on or make changes to this bug.
Description
•