Bug 493111 - ASSERTION: Range index not returned. r=roc