layout/generic/nsSelection.cpp
@@ -3822,6 +3822,7 @@ nsTypedSelection::AddItem(nsIRange *aItem, PRInt32 *aOutIndex)
   if (!mRanges.InsertElementsAt(startIndex, temp))
     return NS_ERROR_OUT_OF_MEMORY;
 
+  *aOutIndex = startIndex + insertionPoint;
   return NS_OK;
 }
 
